--- a/style.css
+++ b/style.css
@@ -1,34 +1,20 @@
-/* Start custom properties */
+/*to use a font we can do two things:
+1- use the link and put them in the head of the html
+2- use @import in the css file
 
-@import url('https://fonts.googleapis.com/css2?family=Ephesis&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+but in the two cases I need to use the font-family property to apply the font to a specific element or to the whole body
+*/
+@import url("https://fonts.googleapis.com/css2?family=Poiret+One&display=swap");
 
 :root {
-  --main-1: #EFE9E3;
-  --main-2:#E8C999 ;
-  --main-3:#C4A484;
-  --main-4:#e8cbb3;
+  --main-1: #efe9e3;
+  --main-2: #e8c999;
+  --main-3: #c4a484;
+  --main-4: #e8cbb3;
   --black: 0 0% 14%;
   --white: 0 0 100%;
-  --padding-top:2.5rem;
-  --padding-bottom:2.5rem;
-}
-
-::selection {
-
-}
-
-::-webkit-scrollbar {
-  /* width: 15px; */
-}
-
-::-webkit-scrollbar-track {
-  /* background: hsl(var(--clr-white) / 0.3);
-  backdrop-filter: blur(15px); */
-}
-
-::-webkit-scrollbar-thumb {
-  /* background: hsl(var(--clr-drk-blue) / 0.5);
-  border-radius: 15px; */
+  --padding-top: 2.5rem;
+  --padding-bottom: 2.5rem;
 }
 /* End custom properties */
 
@@ -74,28 +60,17 @@ ul li {
 
 a {
   text-decoration: none;
-   color: var(--black); 
-  transition: 0.3s;
-  border-radius: 5px;
-  }
-  a:hover {
-  
-    background-color: #E8C999;
-
-    
-   
+  color: hsl(var(--black));
 }
-
 /* End reset */
 
 /* Setting up the body */
 body {
-  /* font-family: "Poppins", sans-serif; */
+  font-family: "Poiret One", sans-serif;
   line-height: 1.5;
   min-height: 100vh;
- 
+  position: relative;
 }
-
 
 /* making images easier to work with */
 img {
@@ -123,133 +98,147 @@ select {
   }
 }
 
-/* Start utility classes */
-
-/* End utility classes */
-
 /* general */
 .container {
+  /* inline is the same as left and right in CSS */
   padding-inline: 2em;
+  /* block is the same as top and bottom in CSS */
+  /* padding-block: 1em; */
   margin-inline: auto;
   max-width: 80rem;
 }
 
-/* Start compontents */
 /* Start Header*/
-.main-nav{
+header {
+  background-color: var(--main-1);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+}
+
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding:10px 10px;
-   background-color: var(--main-1);
-    color: var(--black);
- 
+  padding-block: 10px;
+  color: var(--black);
 }
-.logo{
-  font-family: "Ephesis", cursive;
+
+nav .logo {
   font-weight: 300;
   font-style: normal;
-
 }
-.nav-list{
-  display: flex;
-  gap: 3rem;
 
+nav .nav-list {
+  display: flex;
+  gap: 1rem;
+}
+
+nav .nav-list li a {
+  transition: 0.3s;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+
+nav .nav-list a:hover {
+  background: #e8c999;
 }
 /* End Header*/
 
-/* Start main*/
-.main-page{
-
+/* Start home*/
+.home {
+  height: 100vh;
+  background-image: url("image/img13.jpeg");
+  background-size: cover;
+  background-position: center;
+  /* background-attachment: fixed; */
+  background-repeat: no-repeat;
   position: relative;
-  text-align: center;
-  color: white;
 }
 
-.main-page img {
-    width: 100%;
-  height: 90vh; 
-  object-fit: cover;
-
- 
+.home .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+  position: relative;
 }
-.text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); 
+
+.home .text {
   color: white;
   font-size: 24px;
   font-weight: bold;
-  text-align: center; 
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
 }
-.button-shop{
-  margin-top:20px ;
-  width: 40%;
-  background-color: var(--main-1);
+
+.home .text .button-shop {
+  padding: 10px 40px;
+  background: var(--main-1);
   outline: none;
   border: none;
   cursor: pointer;
   border-radius: 10px;
- 
+  transition: background 0.3s ease;
 }
-.button-shop:hover{
-  background-color:var(--main-2) ;
+
+.home .button-shop:hover {
+  background: var(--main-2);
 }
-/* End Header*/
-/* Start Section 1*/
-.main-social {
+
+.home .main-social {
   position: absolute;
   bottom: 20px;
-  left: 0;
   width: 100%;
-  padding: 0 25px;
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center;
   color: white;
 }
 
-.social-icons i {
+.home .main-social .social-icons a {
   font-size: 20px;
   margin-right: 12px;
   cursor: pointer;
+  color: inherit;
 }
 
-
-.social-text {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+.home .main-social .social-text {
+  display: inline-block;
+  color: inherit;
 }
+/* End  home*/
 
-.social-text p {
-  margin: 0;
-  font-size: 18px;
-  font-weight: 600;
-}
-/* End  Section 1*/
-
-/* Start Section 2*/
+/* Start  services*/
 .services {
-    background: var(--main-1);
+  background: var(--main-1);
+  padding-block: var(--padding-top);
 }
-.service-title{
-  text-align: center;
-  padding-top: 50px;
-}
-.service-title h6{
-color: var(--main-3);
-margin-bottom: 8px;
-}
-.service-title h3{
-font-family:'Times New Roman', Times, serif;
-font-weight: 100;
-font-size: 60px;
-}
-/* End Section 2*/
 
-/* Start Section 3*/
+.services .service-title {
+  text-align: center;
+}
+
+.services .service-title h3 {
+  color: var(--main-3);
+  margin-bottom: 8px;
+  text-transform: uppercase;
+  font-size: 1rem;
+}
+
+.services .service-title h2 {
+  font-weight: 100;
+  text-transform: capitalize;
+  margin-bottom: 8px;
+  font-size: 2rem;
+}
+
 .card-container {
   display: flex;
   gap: 2rem;
@@ -257,100 +246,101 @@ font-size: 60px;
 }
 
 .card {
-  width: 250px;
-  height: 100%;
+  width: 300px;
+  /* this is used to make the height and the width equal */
+  aspect-ratio: 1;
   text-align: center;
-  background-color: var(--main-3);
-  border-radius: 50px 50px 0 0; 
-  overflow: hidden;
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.card img {
-  width: 100%;
-  height: 50%;
+.card .img-box img {
   display: block;
-  border-radius: 50px 50px 0 0;
+  /* this is used to make the height and the width equal */
+  aspect-ratio: 1;
+  border-radius: 50% 50% 0 0;
+  object-fit: cover;
 }
 
-.card h3 {
-  font-size: 18px;
-  margin: 10px 0 5px;
-}
-
-.card p {
-  font-size: 14px;
-  color: #333;
-  margin-bottom: 10px;
+.card .content-box {
+  background-color: var(--main-3);
+  padding: 1rem;
 }
 /* Start Section 3*/
 
 /* Start Popular-section*/
-.section-3{
+.section-3 {
   background-color: var(--white);
-display: flex;
-  text-align: center;  
-  
+  display: flex;
+  text-align: center;
 }
-.section-title{
+
+.section-title {
   align-items: center;
 }
-.section-title h6{
-color: var(--main-3);
-padding-top: 30px;
-text-align: center;
-}
-.section-title h3{
-font-family:'Times New Roman', Times, serif;
-font-size: 30px;
-text-align: center;
-padding: 30px;
 
+.section-title h6 {
+  color: var(--main-3);
+  padding-top: 30px;
+  text-align: center;
 }
-.section-title p{
-   font-size: 14px;
+
+.section-title h3 {
+  /* font-family: "Times New Roman", Times, serif; */
+  font-size: 30px;
+  text-align: center;
+  padding: 30px;
+}
+
+.section-title p {
+  font-size: 14px;
   color: #333;
-            
 }
-.section-title button{
+
+.section-title button {
   background-color: var(--main-1);
-  margin-top:20px ;
+  margin-top: 20px;
   width: 10%;
   outline: none;
   border: none;
   border-radius: 10px;
 }
-.section-title button:hover{
-background-color: var(--main-2);
- cursor: pointer;
+
+.section-title button:hover {
+  background-color: var(--main-2);
+  cursor: pointer;
 }
-.section-3 img{
+
+.section-3 img {
   margin-top: 10px;
-   border-bottom-left-radius: 50%;
-    border-bottom-right-radius: 50%;
-   
+  border-radius: 0 0 50% 50%;
+  aspect-ratio: 1;
+  object-fit: cover;
 }
-.Popular-section{
+
+.Popular-section {
   background-color: var(--main-3);
   text-align: center;
 }
- .Popular-section h6{
+
+.Popular-section h6 {
   color: var(--main-1);
   padding-top: 30px;
-text-align: center;
-margin-top: 20px;
+  text-align: center;
+  margin-top: 20px;
 }
-.Popular-section h3{
-font-family:'Times New Roman', Times, serif;
-font-size: 20px;
-text-align: center;
 
-
+.Popular-section h3 {
+  /* font-family: "Times New Roman", Times, serif; */
+  font-size: 20px;
+  text-align: center;
 }
 
 .Popular-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); 
+  grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
   padding-top: 10px;
   text-align: center;
@@ -359,7 +349,7 @@ text-align: center;
 .item img {
   width: 100%;
   height: auto;
-  border-radius: 10px; 
+  border-radius: 10px;
 }
 
 .info {
@@ -371,75 +361,82 @@ text-align: center;
 }
 /* Start Popular-section*/
 
-
 /*Start Talk-Section*/
 .talk-section {
   background-color: var(--main-1);
- padding-top: 20px;
+  padding-top: 20px;
   display: flex;
   justify-content: center;
 }
 
 .talk-box {
-  background-color: var(--main-4); 
-  width: 450px;               
-  height: 450px;             
-  border-radius: 50% 50% 0 0;         
+  background-color: var(--main-4);
+  width: 450px;
+  height: 450px;
+  border-radius: 50% 50% 0 0;
   display: flex;
   flex-direction: column;
-  align-items: center;   
+  align-items: center;
   justify-content: center;
-  text-align: center;    
-  gap: 20px;                
-  padding: 40px;             
+  text-align: center;
+  gap: 20px;
+  padding: 40px;
 }
-.talk-box h3{
-  font-family: 'Courier New', Courier, monospace;
+
+.talk-box h3 {
+  /* font-family: "Courier New", Courier, monospace; */
 }
+
 .talk-box p {
- font-family:'Times New Roman', Times, serif;
+  /* font-family: "Times New Roman", Times, serif; */
 }
-.talk-box button{
+
+.talk-box button {
   background-color: var(--main-1);
   width: 30%;
   outline: none;
   border: none;
   cursor: pointer;
 }
-.talk-box button:hover{
+
+.talk-box button:hover {
   background-color: #e8cbb3;
 }
 
-hr{
- border: 2px solid var(--main-3);
+hr {
+  border: 2px solid var(--main-3);
 }
 /*End Talk-Section*/
 
 /* Start Footer*/
-.footer{
+.footer {
   background-color: var(--main-1);
 }
-.footer-top{
+
+.footer-top {
   display: flex;
   justify-content: space-between;
 }
-.footer-left,.subscribe{
+
+.footer-left,
+.subscribe {
   margin: 20px;
 }
-.footer-right{
+
+.footer-right {
   display: flex;
   gap: 20px;
 }
-.footer-bottom{
+
+.footer-bottom {
   background-color: var(--main-4);
   display: flex;
   justify-content: space-between;
 }
-.social{
+
+.social {
   display: flex;
   padding: 5px;
-gap: 20px;
+  gap: 20px;
 }
-/* Start Footer*/
-
-/* End compontents */
+/* End Footer*/
