--- a/style.css
+++ b/style.css
@@ -1,20 +1,34 @@
-/*to use a font we can do two things:
-1- use the link and put them in the head of the html
-2- use @import in the css file
+/* Start custom properties */
 
-but in the two cases I need to use the font-family property to apply the font to a specific element or to the whole body
-*/
-@import url("https://fonts.googleapis.com/css2?family=Poiret+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Ephesis&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-  --main-1: #efe9e3;
-  --main-2: #e8c999;
-  --main-3: #c4a484;
-  --main-4: #e8cbb3;
+  --main-1: #EFE9E3;
+  --main-2:#E8C999 ;
+  --main-3:#C4A484;
+  --main-4:#e8cbb3;
   --black: 0 0% 14%;
   --white: 0 0 100%;
-  --padding-top: 2.5rem;
-  --padding-bottom: 2.5rem;
+  --padding-top:2.5rem;
+  --padding-bottom:2.5rem;
+}
+
+::selection {
+
+}
+
+::-webkit-scrollbar {
+  /* width: 15px; */
+}
+
+::-webkit-scrollbar-track {
+  /* background: hsl(var(--clr-white) / 0.3);
+  backdrop-filter: blur(15px); */
+}
+
+::-webkit-scrollbar-thumb {
+  /* background: hsl(var(--clr-drk-blue) / 0.5);
+  border-radius: 15px; */
 }
 /* End custom properties */
 
@@ -60,17 +74,28 @@ ul li {
 
 a {
   text-decoration: none;
-  color: hsl(var(--black));
+   color: var(--black); 
+  transition: 0.3s;
+  border-radius: 5px;
+  }
+  a:hover {
+  
+    background-color: #E8C999;
+
+    
+   
 }
+
 /* End reset */
 
 /* Setting up the body */
 body {
-  font-family: "Poiret One", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
   line-height: 1.5;
   min-height: 100vh;
-  position: relative;
+ 
 }
+
 
 /* making images easier to work with */
 img {
@@ -98,147 +123,133 @@ select {
   }
 }
 
+/* Start utility classes */
+
+/* End utility classes */
+
 /* general */
 .container {
-  /* inline is the same as left and right in CSS */
   padding-inline: 2em;
-  /* block is the same as top and bottom in CSS */
-  /* padding-block: 1em; */
   margin-inline: auto;
   max-width: 80rem;
 }
 
+/* Start compontents */
 /* Start Header*/
-header {
-  background-color: var(--main-1);
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 10;
-}
-
-nav {
+.main-nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-block: 10px;
-  color: var(--black);
+  padding:10px 10px;
+   background-color: var(--main-1);
+    color: var(--black);
+ 
 }
-
-nav .logo {
+.logo{
+  font-family: "Ephesis", cursive;
   font-weight: 300;
   font-style: normal;
-}
 
-nav .nav-list {
+}
+.nav-list{
   display: flex;
-  gap: 1rem;
-}
+  gap: 3rem;
 
-nav .nav-list li a {
-  transition: 0.3s;
-  border-radius: 5px;
-  padding: 5px 10px;
-}
-
-nav .nav-list a:hover {
-  background: #e8c999;
 }
 /* End Header*/
 
-/* Start home*/
-.home {
-  height: 100vh;
-  background-image: url("image/img13.jpeg");
-  background-size: cover;
-  background-position: center;
-  /* background-attachment: fixed; */
-  background-repeat: no-repeat;
+/* Start main*/
+.main-page{
+
   position: relative;
+  text-align: center;
+  color: white;
 }
 
-.home .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  height: 100%;
-  position: relative;
-}
+.main-page img {
+    width: 100%;
+  height: 90vh; 
+  object-fit: cover;
 
-.home .text {
+ 
+}
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
   color: white;
   font-size: 24px;
   font-weight: bold;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 20px;
+  text-align: center; 
 }
-
-.home .text .button-shop {
-  padding: 10px 40px;
-  background: var(--main-1);
+.button-shop{
+  margin-top:20px ;
+  width: 40%;
+  background-color: var(--main-1);
   outline: none;
   border: none;
   cursor: pointer;
   border-radius: 10px;
-  transition: background 0.3s ease;
+ 
 }
-
-.home .button-shop:hover {
-  background: var(--main-2);
+.button-shop:hover{
+  background-color:var(--main-2) ;
 }
-
-.home .main-social {
+/* End Header*/
+/* Start Section 1*/
+.main-social {
   position: absolute;
   bottom: 20px;
+  left: 0;
   width: 100%;
+  padding: 0 25px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between; 
   align-items: center;
   color: white;
 }
 
-.home .main-social .social-icons a {
+.social-icons i {
   font-size: 20px;
   margin-right: 12px;
   cursor: pointer;
-  color: inherit;
 }
 
-.home .main-social .social-text {
-  display: inline-block;
-  color: inherit;
-}
-/* End  home*/
 
-/* Start  services*/
+.social-text {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.social-text p {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 600;
+}
+/* End  Section 1*/
+
+/* Start Section 2*/
 .services {
-  background: var(--main-1);
-  padding-block: var(--padding-top);
+    background: var(--main-1);
 }
-
-.services .service-title {
+.service-title{
   text-align: center;
+  padding-top: 50px;
 }
-
-.services .service-title h3 {
-  color: var(--main-3);
-  margin-bottom: 8px;
-  text-transform: uppercase;
-  font-size: 1rem;
+.service-title h6{
+color: var(--main-3);
+margin-bottom: 8px;
 }
-
-.services .service-title h2 {
-  font-weight: 100;
-  text-transform: capitalize;
-  margin-bottom: 8px;
-  font-size: 2rem;
+.service-title h3{
+font-family:'Times New Roman', Times, serif;
+font-weight: 100;
+font-size: 60px;
 }
+/* End Section 2*/
 
+/* Start Section 3*/
 .card-container {
   display: flex;
   gap: 2rem;
@@ -246,101 +257,100 @@ nav .nav-list a:hover {
 }
 
 .card {
-  width: 300px;
-  /* this is used to make the height and the width equal */
-  aspect-ratio: 1;
+  width: 250px;
+  height: 100%;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.card .img-box img {
-  display: block;
-  /* this is used to make the height and the width equal */
-  aspect-ratio: 1;
-  border-radius: 50% 50% 0 0;
-  object-fit: cover;
-}
-
-.card .content-box {
   background-color: var(--main-3);
-  padding: 1rem;
+  border-radius: 50px 50px 0 0; 
+  overflow: hidden;
+  
+}
+
+.card img {
+  width: 100%;
+  height: 50%;
+  display: block;
+  border-radius: 50px 50px 0 0;
+}
+
+.card h3 {
+  font-size: 18px;
+  margin: 10px 0 5px;
+}
+
+.card p {
+  font-size: 14px;
+  color: #333;
+  margin-bottom: 10px;
 }
 /* Start Section 3*/
 
 /* Start Popular-section*/
-.section-3 {
+.section-3{
   background-color: var(--white);
-  display: flex;
-  text-align: center;
+display: flex;
+  text-align: center;  
+  
 }
-
-.section-title {
+.section-title{
   align-items: center;
 }
-
-.section-title h6 {
-  color: var(--main-3);
-  padding-top: 30px;
-  text-align: center;
+.section-title h6{
+color: var(--main-3);
+padding-top: 30px;
+text-align: center;
 }
+.section-title h3{
+font-family:'Times New Roman', Times, serif;
+font-size: 30px;
+text-align: center;
+padding: 30px;
 
-.section-title h3 {
-  /* font-family: "Times New Roman", Times, serif; */
-  font-size: 30px;
-  text-align: center;
-  padding: 30px;
 }
-
-.section-title p {
-  font-size: 14px;
+.section-title p{
+   font-size: 14px;
   color: #333;
+            
 }
-
-.section-title button {
+.section-title button{
   background-color: var(--main-1);
-  margin-top: 20px;
+  margin-top:20px ;
   width: 10%;
   outline: none;
   border: none;
   border-radius: 10px;
 }
-
-.section-title button:hover {
-  background-color: var(--main-2);
-  cursor: pointer;
+.section-title button:hover{
+background-color: var(--main-2);
+ cursor: pointer;
 }
-
-.section-3 img {
+.section-3 img{
   margin-top: 10px;
-  border-radius: 0 0 50% 50%;
-  aspect-ratio: 1;
-  object-fit: cover;
+   border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+   
 }
-
-.Popular-section {
+.Popular-section{
   background-color: var(--main-3);
   text-align: center;
 }
-
-.Popular-section h6 {
+ .Popular-section h6{
   color: var(--main-1);
   padding-top: 30px;
-  text-align: center;
-  margin-top: 20px;
+text-align: center;
+margin-top: 20px;
 }
+.Popular-section h3{
+font-family:'Times New Roman', Times, serif;
+font-size: 20px;
+text-align: center;
 
-.Popular-section h3 {
-  /* font-family: "Times New Roman", Times, serif; */
-  font-size: 20px;
-  text-align: center;
+
 }
 
 .Popular-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr); 
   gap: 1rem;
   padding-top: 10px;
   text-align: center;
@@ -349,7 +359,7 @@ nav .nav-list a:hover {
 .item img {
   width: 100%;
   height: auto;
-  border-radius: 10px;
+  border-radius: 10px; 
 }
 
 .info {
@@ -361,82 +371,75 @@ nav .nav-list a:hover {
 }
 /* Start Popular-section*/
 
+
 /*Start Talk-Section*/
 .talk-section {
   background-color: var(--main-1);
-  padding-top: 20px;
+ padding-top: 20px;
   display: flex;
   justify-content: center;
 }
 
 .talk-box {
-  background-color: var(--main-4);
-  width: 450px;
-  height: 450px;
-  border-radius: 50% 50% 0 0;
+  background-color: var(--main-4); 
+  width: 450px;               
+  height: 450px;             
+  border-radius: 50% 50% 0 0;         
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center;   
   justify-content: center;
-  text-align: center;
-  gap: 20px;
-  padding: 40px;
+  text-align: center;    
+  gap: 20px;                
+  padding: 40px;             
 }
-
-.talk-box h3 {
-  /* font-family: "Courier New", Courier, monospace; */
+.talk-box h3{
+  font-family: 'Courier New', Courier, monospace;
 }
-
 .talk-box p {
-  /* font-family: "Times New Roman", Times, serif; */
+ font-family:'Times New Roman', Times, serif;
 }
-
-.talk-box button {
+.talk-box button{
   background-color: var(--main-1);
   width: 30%;
   outline: none;
   border: none;
   cursor: pointer;
 }
-
-.talk-box button:hover {
+.talk-box button:hover{
   background-color: #e8cbb3;
 }
 
-hr {
-  border: 2px solid var(--main-3);
+hr{
+ border: 2px solid var(--main-3);
 }
 /*End Talk-Section*/
 
 /* Start Footer*/
-.footer {
+.footer{
   background-color: var(--main-1);
 }
-
-.footer-top {
+.footer-top{
   display: flex;
   justify-content: space-between;
 }
-
-.footer-left,
-.subscribe {
+.footer-left,.subscribe{
   margin: 20px;
 }
-
-.footer-right {
+.footer-right{
   display: flex;
   gap: 20px;
 }
-
-.footer-bottom {
+.footer-bottom{
   background-color: var(--main-4);
   display: flex;
   justify-content: space-between;
 }
-
-.social {
+.social{
   display: flex;
   padding: 5px;
-  gap: 20px;
+gap: 20px;
 }
-/* End Footer*/
+/* Start Footer*/
+
+/* End compontents */
